# variable-len-reader

./: .gitignore  Cargo.toml  README.md  README_zh.md  test-builds.bat
src/: bools.rs  bufs.rs  bytes.rs  lib.rs  primitive.rs  raw.rs  reader.rs  reader_bools.rs  reader_float.rs  reader_raw.rs  reader_signed.rs  reader_varint.rs  signed.rs  str.rs  tests.rs  variable_len.rs  varint.rs  writer.rs  writer_bools.rs  writer_float.rs  writer_raw.rs  writer_signed.rs  writer_varint.rs
src/asynchronous/: bools.rs  helper.rs  mod.rs  raw.rs  read_bools.rs  read_float_varint.rs  read_float_varint_long.rs  read_raw.rs  read_raw_size.rs  read_signed_varint.rs  read_signed_varint_long.rs  read_signed_varint_long_size.rs  read_signed_varint_size.rs  read_varint.rs  read_varint_long.rs  read_varint_long_size.rs  read_varint_size.rs  reader.rs  reader_bools.rs  reader_float.rs  reader_raw.rs  reader_signed.rs  reader_varint.rs  signed.rs  tests.rs  varint.rs  write_bools.rs  write_float_varint.rs  write_float_varint_long.rs  write_raw.rs  write_raw_size.rs  write_signed_varint.rs  write_signed_varint_long.rs  write_signed_varint_long_size.rs  write_signed_varint_size.rs  write_varint.rs  write_varint_long.rs  write_varint_long_size.rs  write_varint_size.rs  writer.rs  (+5 more)
src/impls/: bytes.rs  mod.rs  std.rs  tokio.rs
src/synchronous/: mod.rs  read_bools.rs  read_float_varint.rs  read_float_varint_long.rs  read_raw.rs  read_raw_size.rs  read_signed_varint.rs  read_signed_varint_long.rs  read_signed_varint_long_size.rs  read_signed_varint_size.rs  read_varint.rs  read_varint_long.rs  read_varint_long_size.rs  read_varint_size.rs  reader.rs  tests.rs  write_bools.rs  write_float_varint.rs  write_float_varint_long.rs  write_raw.rs  write_raw_size.rs  write_signed_varint.rs  write_signed_varint_long.rs  write_signed_varint_long_size.rs  write_signed_varint_size.rs  write_varint.rs  write_varint_long.rs  write_varint_long_size.rs  write_varint_size.rs  writer.rs  writer_float.rs  writer_signed.rs  writer_varint.rs
src/util/: bufs.rs  mod.rs  read_buf.rs  write_buf.rs  zigzag.rs
tests/: asynchronous.rs  reader.rs  synchronous.rs  writer.rs
tests/func/: bools.rs  raw.rs  string.rs  value_generator.rs  varint.rs  varint_float.rs  varint_signed.rs
