[package]
name = "variable-len-reader"
version = "3.0.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A library for reading/writing variable length data. Support AsyncRead/AsyncWrite in tokio."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xuxiaocheng0201/variable-len-reader/"
documentation = "https://docs.rs/variable-len-reader/"
categories = ["encoding"]
keywords = ["varint", "zigzag", "io", "async", "futures"]
exclude = ["test-builds.bat"]

[dependencies]
pin-project-lite = { version = "~0.2", optional = true }
tokio = { version = "^1", optional = true, default-features = false }
bytes = { version = "^1", optional = true, default-features = false }

[features]
default = ["sync_default", "std"]
full = ["sync_full", "async_full", "tokio"]

alloc = []
std = ["alloc", "bytes?/std"]
zigzag = []


sync = []
sync_full = ["sync_bools", "sync_raw", "sync_raw_size",
    "sync_varint", "sync_varint_size", "sync_varint_long", "sync_varint_long_size",
    "sync_signed_varint", "sync_signed_varint_size", "sync_signed_varint_long", "sync_signed_varint_long_size",
    "sync_float_varint", "sync_float_varint_long",
    "sync_vec_u8", "sync_string"]
sync_default = ["sync_varint", "sync_string"]

sync_bools = ["sync"]
sync_raw = ["sync"]
sync_raw_size = ["sync_raw"]
sync_varint = ["sync_raw"]
sync_varint_size = ["sync_raw", "sync_varint"]
sync_varint_long = ["sync_raw", "sync_varint"]
sync_varint_long_size = ["sync_raw", "sync_varint_long", "sync_varint"]
sync_signed_varint = ["sync_varint", "zigzag"]
sync_signed_varint_size = ["sync_varint_size", "sync_signed_varint", "sync_varint", "zigzag"]
sync_signed_varint_long = ["sync_varint", "sync_varint_long", "zigzag"]
sync_signed_varint_long_size = ["sync_varint_long_size", "sync_signed_varint_long", "sync_varint", "zigzag"]
sync_float_varint = ["sync_varint"]
sync_float_varint_long = ["sync_varint_long"]
sync_vec_u8 = ["sync_varint_size", "alloc"]
sync_string = ["sync_vec_u8", "alloc"]


async = ["dep:pin-project-lite"]
async_full = ["async_bools", "async_raw", "async_raw_size",
    "async_varint", "async_varint_size", "async_varint_long",
    "async_signed_varint", "async_signed_varint_long",
    "async_float_varint", "async_float_varint_long",
    "async_vec_u8", "async_string"]
async_default = ["async_varint", "async_string", "tokio"]

async_bools = ["async"]
async_raw = ["async"]
async_raw_size = ["async_raw"]
async_varint = ["async_raw"]
async_varint_size = ["async_raw", "async_varint"]
async_varint_long = ["async_raw", "async_varint"]
async_varint_long_size = ["async_raw", "async_varint_long", "async_varint"]
async_signed_varint = ["async_varint", "zigzag"]
async_signed_varint_size = ["async_varint_size", "async_signed_varint", "async_varint", "zigzag"]
async_signed_varint_long = ["async_varint", "async_varint_long", "zigzag"]
async_signed_varint_long_size = ["async_varint_long_size", "async_signed_varint_long", "async_varint", "zigzag"]
async_float_varint = ["async_varint"]
async_float_varint_long = ["async_varint_long"]
async_vec_u8 = ["async_varint_size", "alloc"]
async_string = ["async_vec_u8", "alloc"]


tokio = ["dep:tokio", "async", "alloc"]
bytes = ["dep:bytes"]

[dev-dependencies]
anyhow = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }

[build-dependencies]
reportme = ">=0.2"

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
