[package]
name = "variable-len-reader"
version = "3.2.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A library for reading/writing variable length data. Support AsyncRead/AsyncWrite in tokio."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xuxiaocheng0201/variable-len-reader/"
documentation = "https://docs.rs/variable-len-reader/"
categories = ["encoding", "asynchronous", "no-std"]
keywords = ["varint", "io", "async", "futures", "no-std"]

[dependencies]
pin-project-lite = { version = "~0.2", optional = true }
tokio = { version = "^1", optional = true, default-features = false }
bytes = { version = "^1", optional = true, default-features = false }

[features]
default = ["sync_default", "std-comp"]
full = ["sync_full", "async_full", "comp-full"]

zigzag = []
alloc = []
std = ["alloc", "bytes?/std"]
tokio = ["dep:tokio"]
bytes = ["dep:bytes"]

sync = []
sync_full = ["sync_bools", "sync_raw", "sync_raw_size",
    "sync_varint", "sync_varint_size", "sync_varint_long", "sync_varint_long_size",
    "sync_signed_varint", "sync_signed_varint_size", "sync_signed_varint_long", "sync_signed_varint_long_size",
    "sync_float_varint", "sync_float_varint_long",
    "sync_u8_vec", "sync_string"]
sync_default = ["sync_varint", "sync_string"]
sync_bools = ["sync"]
sync_raw = ["sync"]
sync_raw_size = ["sync_raw"]
sync_varint = ["sync_raw"]
sync_varint_size = ["sync_raw", "sync_varint"]
sync_varint_long = ["sync_raw", "sync_varint"]
sync_varint_long_size = ["sync_raw", "sync_varint_long", "sync_varint"]
sync_signed_varint = ["sync_varint", "zigzag"]
sync_signed_varint_size = ["sync_varint_size", "sync_signed_varint", "sync_varint", "zigzag"]
sync_signed_varint_long = ["sync_varint", "sync_varint_long", "zigzag"]
sync_signed_varint_long_size = ["sync_varint_long_size", "sync_signed_varint_long", "sync_varint", "zigzag"]
sync_float_varint = ["sync_varint"]
sync_float_varint_long = ["sync_varint_long"]
sync_u8_vec = ["sync_varint_size", "alloc"]
sync_string = ["sync_u8_vec", "alloc"]

async = ["dep:pin-project-lite"]
async_full = ["async_bools", "async_raw", "async_raw_size",
    "async_varint", "async_varint_size", "async_varint_long", "async_varint_long_size",
    "async_signed_varint", "async_signed_varint_size", "async_signed_varint_long", "async_signed_varint_long_size",
    "async_float_varint", "async_float_varint_long",
    "async_u8_vec", "async_string"]
async_default = ["async_varint", "async_string"]
async_bools = ["async"]
async_raw = ["async"]
async_raw_size = ["async_raw"]
async_varint = ["async_raw"]
async_varint_size = ["async_raw", "async_varint"]
async_varint_long = ["async_raw", "async_varint"]
async_varint_long_size = ["async_raw", "async_varint_long", "async_varint"]
async_signed_varint = ["async_varint", "zigzag"]
async_signed_varint_size = ["async_varint_size", "async_signed_varint", "async_varint", "zigzag"]
async_signed_varint_long = ["async_varint", "async_varint_long", "zigzag"]
async_signed_varint_long_size = ["async_varint_long_size", "async_signed_varint_long", "async_varint", "zigzag"]
async_float_varint = ["async_varint"]
async_float_varint_long = ["async_varint_long"]
async_u8_vec = ["async_varint_size", "alloc"]
async_string = ["async_u8_vec", "alloc"]

comp-full = ["std-comp", "tokio-comp"]
std-comp = ["std", "alloc", "sync"]
tokio-comp = ["tokio", "alloc", "async"]

[dev-dependencies]
anyhow = "^1" # this is used in Readme test
tokio = { version = "^1", features = ["test-util", "macros", "rt-multi-thread", "net"] }

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
